infrastructure/custom-charts/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  namespace: control
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: cors-plugin
spec:
  ingressClassName: kong
  rules:
  - host: selfprovision 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "selfprovisionui-service"
            port:
              number: 80
  - host: tenantmanagement
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "tenantmanagement-service"
            port:
              number: 80
  - host: billing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "billing-service"
            port:
              number: 80
